# datafusion-java

./: .gitignore  CLAUDE.md  LOGICAL_PLAN_MISSING_FEATURES.md  allclasses-index.html  allpackages-index.html  constant-values.html  diplomat-config.toml  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  search.html  serialized-form.html  settings.gradle  type-search-index.js
.claude/: ffi-violations.md
.claude/notes/: provider-split-options.md
.claude/rules/: build-and-release.md  documentation.md  ffi-abi-stable-compatible.md  ffi.md  listing-table.md  public-api.md  rust-table-providers.md  testing.md
.claude/skills/release/: SKILL.md
.claude/skills/upgrade-datafusion/: SKILL.md  config-options.md
.github/workflows/: build.yml  publish-ffi.yml  release.yml
datafusion-ffi-graal-test/: README.md  build.gradle
datafusion-ffi-graal-test/scripts/: run-native-test.sh
datafusion-ffi-java/: build.gradle  concurrency-strategy.md  dataframe-expr-design.md  diplomat-poc.md
datafusion-ffi-java/src/main/proto/datafusion/: datafusion.proto  datafusion_common.proto
datafusion-ffi-java/src/test/resources/: test.parquet
datafusion-ffi-native/: Cargo.toml  UPGRADING.md  build.rs  diplomat-needs.md
datafusion-ffi-native/src/: arrow_ffi_util.rs  bridge.rs  catalog.rs  catalog_provider.rs  context.rs  data_frame.rs  dataframe.rs  diplomat_util.rs  duckdb_factory.rs  error.rs  execution.rs  execution_plan.rs  factory_runtime.rs  ffi_adapters.rs  file_format.rs  file_opener.rs  file_source.rs  flight_sql_factory.rs  flight_sql_federation.rs  flight_sql_test_server.rs  guarantee.rs  java_backed_catalog.rs  java_backed_plan.rs  java_backed_provider.rs  java_backed_schema.rs  java_provider.rs  lib.rs  listing_table.rs  literal_guarantee.rs  logical_plan.rs  mysql_factory.rs  native_util.rs  physical_expr.rs  plan.rs  postgres_factory.rs  providers.rs  record_batch_reader.rs  record_batch_stream.rs  runtime.rs  runtime_env.rs  (+19 more)
datafusion-ffi-native/src/providers/: catalog.rs  file_format.rs  file_opener.rs  file_source.rs  mod.rs  plan.rs  schema.rs  stream.rs  table.rs  udf.rs
datafusion-java/: MIGRATION.md  build.gradle
datafusion-panama-java/: build.gradle  gradlew  run_hello_world.sh  settings.gradle
org/apache/arrow/datafusion/: ArrowTypeProtoConverter.html  CsvOptions.Builder.html  CsvOptions.html  DfAggregateUDFAdapter.html  DfCatalogAdapter.html  DfFileFormatAdapter.html  DfScalarUDFAdapter.html  DfTableAdapter.html  DfVarProviderAdapter.html  ExprProtoConverter.html  Functions.html  JsonOptions.Builder.html  JsonOptions.html  Location.html  LogicalPlanProtoConverter.html  NativeLoader.html  ParquetOptions.Builder.html  ParquetOptions.ParquetColumnOptions.html  ParquetOptions.html  ScalarValueProtoConverter.html  Span.html  Spans.html  TableReferenceConverter.html  package-summary.html  package-tree.html
org/apache/arrow/datafusion/catalog/: CatalogProvider.html  NativeCatalogProvider.html  NativeSchemaProvider.html  ScanArgs.html  SchemaProvider.html  Session.html  TableProvider.html  package-summary.html  package-tree.html
org/apache/arrow/datafusion/common/: BridgeUtil.html  Column.html  DataFusionError.html  NativeDataFusionError.html  ScalarValue.Binary.html  ScalarValue.BinaryValue.html  ScalarValue.BinaryView.html  ScalarValue.BooleanValue.html  ScalarValue.Date32.html  ScalarValue.Date64.html  ScalarValue.DateValue.html  ScalarValue.Decimal128.html  ScalarValue.Decimal256.html  ScalarValue.Decimal32.html  ScalarValue.Decimal64.html  ScalarValue.DecimalValue.html  ScalarValue.DictionaryValue.html  ScalarValue.DurationMicrosecond.html  ScalarValue.DurationMillisecond.html  ScalarValue.DurationNanosecond.html  ScalarValue.DurationSecond.html  ScalarValue.DurationValue.html  ScalarValue.FixedSizeBinary.html  ScalarValue.FixedSizeListValue.html  ScalarValue.Float16.html  ScalarValue.Float32.html  ScalarValue.Float64.html  ScalarValue.FloatValue.html  ScalarValue.Int16.html  ScalarValue.Int32.html  ScalarValue.Int64.html  ScalarValue.Int8.html  ScalarValue.IntegerValue.html  ScalarValue.IntervalDayTime.html  ScalarValue.IntervalMonthDayNano.html  ScalarValue.IntervalYearMonth.html  ScalarValue.LargeBinary.html  ScalarValue.LargeListValue.html  ScalarValue.LargeUtf8.html  ScalarValue.ListScalarValue.html  (+31 more)
org/apache/arrow/datafusion/config/: CatalogOptions.Builder.html  CatalogOptions.html  ConfigOptions.Builder.html  ConfigOptions.html  Dialect.html  ExecutionOptions.Builder.html  ExecutionOptions.html  ExplainAnalyzeLevel.html  ExplainFormat.html  ExplainOptions.Builder.html  ExplainOptions.html  FormatOptions.Builder.html  FormatOptions.html  OptimizerOptions.Builder.html  OptimizerOptions.html  ParquetOptions.Builder.html  (+6 more)
scripts/: JarValidationTest.java  organize-native-libs.sh  platforms.conf  platforms.sh  validate-jar.ps1  validate-jar.sh  verify-docs-links.sh  verify-jar-contents.sh
(+607 files in other folders)
