[package]
name = "datafusion_ffi_native"
version = "0.1.0"
homepage = "https://github.com/apache/datafusion"
repository = "https://github.com/apache/datafusion"
authors = ["Apache Arrow <dev@arrow.apache.org>"]
description = "C-FFI bindings for DataFusion to support Java FFM API"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
datafusion = "52.1"
datafusion-datasource = "52.1"
datafusion-ffi = "52.1"
abi_stable = "0.11.3"
async-ffi = { version = "0.5.0", features = ["abi_stable"] }
arrow = { version = "57", features = ["ffi"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3"
async-trait = "0.1"
object_store = "0.12"

[profile.release]
lto = true
strip = true
