[package]
name = "datafusion_ffi_native"
version = "0.1.0"
homepage = "https://github.com/apache/datafusion"
repository = "https://github.com/apache/datafusion"
authors = ["Apache Arrow <dev@arrow.apache.org>"]
description = "C-FFI bindings for DataFusion to support Java FFM API"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
datafusion = "52.1"
datafusion-datasource = "52.1"
datafusion-proto = "52.1"
arrow = { version = "57", features = ["ffi"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3"
async-trait = "0.1"
half = "2"
prost = "0.14"
object_store = "0.12"
diplomat = { git = "https://github.com/pgwhalen/diplomat", tag = "v0.14.0-java", subdirectory = "macro" }
diplomat-runtime = { git = "https://github.com/pgwhalen/diplomat", tag = "v0.14.0-java", subdirectory = "runtime" }

[build-dependencies]
diplomat-tool = { git = "https://github.com/pgwhalen/diplomat", tag = "v0.14.0-java", subdirectory = "tool" }
diplomat_core = { git = "https://github.com/pgwhalen/diplomat", tag = "v0.14.0-java", subdirectory = "core" }

[profile.release]
lto = true
strip = true

# Reduced-memory release profile for CI ARM runners (no LTO to avoid OOM during linking)
[profile.ci-arm]
inherits = "release"
lto = false
