[package]
name = "datafusion_ffi_native"
version = "0.1.0"
homepage = "https://github.com/apache/datafusion"
repository = "https://github.com/apache/datafusion"
authors = ["Apache Arrow <dev@arrow.apache.org>"]
description = "C-FFI bindings for DataFusion to support Java FFM API"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
datafusion = "53.1"
datafusion-datasource = "53.1"
datafusion-proto = "53.1"
arrow = { version = "58", features = ["ffi"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3"
async-trait = "0.1"
half = "2"
prost = "0.14"
object_store = "0.13"
datafusion-federation = { version = "0.5", features = ["sql"] }
datafusion-table-providers = { version = "0.11", default-features = false }
arrow-flight = { version = "58", features = ["flight-sql-experimental"], optional = true }
tonic = { version = "0.14", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
dashmap = { version = "6", optional = true }
diplomat = { git = "https://github.com/pgwhalen/diplomat", tag = "v0.14.0-java" }
diplomat-runtime = { git = "https://github.com/pgwhalen/diplomat", tag = "v0.14.0-java" }

[build-dependencies]
diplomat-tool = { git = "https://github.com/pgwhalen/diplomat", tag = "v0.14.0-java" }
diplomat_core = { git = "https://github.com/pgwhalen/diplomat", tag = "v0.14.0-java" }

[features]
# Default features mirror the headline providers + the in-process Flight SQL test server. Each
# Rust-side custom-table provider is its own optional feature, so a slimmer build can pick only
# what it needs (e.g. `--no-default-features --features sqlite`).
default = ["test-server", "flight", "sqlite", "postgres", "mysql"]
flight = ["dep:arrow-flight", "dep:tonic", "datafusion-table-providers/flight"]
sqlite = [
    "datafusion-table-providers/sqlite-bundled",
    "datafusion-table-providers/sqlite-federation",
]
postgres = [
    "datafusion-table-providers/postgres",
    "datafusion-table-providers/postgres-federation",
]
mysql = ["datafusion-table-providers/mysql", "datafusion-table-providers/mysql-federation"]
# Opt-in provider that requires bundling a C library. Enabled via Gradle's
# `-Pfeatures=duckdb` property, which forwards to `cargo build --features duckdb`.
duckdb = ["datafusion-table-providers/duckdb-federation"]
# In-process Flight SQL server used by integration tests. Always pulls in `flight` because it
# uses `arrow-flight` directly.
test-server = ["flight", "dep:uuid", "dep:dashmap"]

[profile.release]
lto = true
strip = true

# Reduced-memory release profile for CI ARM runners (no LTO to avoid OOM during linking)
[profile.ci-arm]
inherits = "release"
lto = false
